# TEST

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/mobile/xiyou/atest/: AppManagerNative.aidl  IMyAidlInterface.aidl
app/src/main/java/mobile/xiyou/atest/: ActivityBase.java  App.java  AppManagerService.java  ContextBase.java  JniTest.java  MainActivity.java  MainApp.java  PachInstr.java  PkgInfo.java  Rf.java  Service1.java  ServiceBase.java  ServiceProxy.java  TestActivity.java  TestApp.java  TestService.java
app/src/main/java/mobile/xiyou/atest/Remote/: ClientReceiveCmdThread.java  ClientThread.java  MasterActivity.java  MasterSendCmdThread.java  MasterThread.java  RemoteImage.java  RemoteInfo.java  RemoteService.java  RemoteUtil.java
app/src/main/java/mobile/xiyou/atest/hook_contentProvider/: ContentProviderBase.java  ContentProviderStub1.java  ContentProviderStub2.java  ContentProviderStub3.java  ContentProviderStub4.java  ContentProviderStub5.java  ContentProviderStub6.java  ContentProviderStub7.java  ContentProviderStub8.java  ContentProviderStub9.java
app/src/main/jni/: aaa.cpp  jnitest.c
app/src/main/res/layout/: master_activity.xml
test/src/main/java/com/example/: MyClass.java
